--- a/style.css
+++ b/style.css
@@ -9,3 +9,24 @@
     /* height: 0; */
     font-family: Montserrat;
 }
+.target_button{
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    border-radius: 5px;
+    border: none;
+    position: absolute; 
+    right: 0px; 
+    height: 50px; 
+    width: 70px;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+}
+#edit-target_button{
+    background: green;
+}
+#remove-target_button{
+    background: red;
+}
